backport add dependency reduced pom file and update gitignore (#914)
* Add a DependencyReducedPom back to get a fine pom to install/deploy (#908)

* add a DependencyReducedPom back to get a fine pom to install/deploy

* meet PR reivew

* Remove *.txt from gitignore as it matched versioned files; rearrange entries and standardize entries

* Touch up gitignore to only exclude root /dist dir