@@ -30,13 +30,21 @@ else
     exit 1
 fi
 
+MVN_OPTS_LIST="-Xmx2g -XX:ReservedCodeCacheSize=512m"
+
 if [[ "$_java" ]]; then
     version=$("$_java" -version 2>&1 | awk -F '"' '/version/ {print $2}')
     if [[ "$version" < "1.7" ]]; then
         echo Require a java version not lower than 1.7
         exit 1
     fi
+    # For jdk7
+    if [[ "$version" < "1.8" ]]; then
+        MVN_OPTS_LIST="$MVN_OPTS_LIST -XX:MaxPermSize=1G"
+    fi
 fi
+
+export MAVEN_OPTS=${MAVEN_OPTS:-"$MVN_OPTS_LIST"}
 
 # Check if mvn installed
 MVN_INSTALL=$(which mvn 2>/dev/null | grep mvn | wc -l)
